# persona-agent

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE_ANALYSIS.md  ARCHITECTURE_REVIEW.md  CI_FIXES_SUMMARY.md  CI_GUIDE.md  CODE_REVIEW_REPORT.md  COMPREHENSIVE_CODE_REVIEW.md  CONTRIBUTING.md  DESIGN.md  Dockerfile  EXECUTION_PLAN.md  FINAL_COMPLETION_REPORT.md  FINAL_STATUS.md  IMPLEMENTATION_GUIDE.md  IMPROVEMENT_ROADMAP.md  MERGE_SUMMARY.md  NEXT_STEPS.md  OPENCODE_SETUP_GUIDE.md  PIPELINE_IMPLEMENTATION_PLAN.md  PROJECT_PLAN.md  PROJECT_STATUS.md  PR_ARCHITECTURE_REFACTOR.md  PR_READY.md  README.md  REFACTOR_SUMMARY.md  RESEARCH.md  RESEARCH_VERIFIED.md  REVIEW_SYNTHESIS.md  SETUP_COMPLETE.md  SPEC.md  TOOLKIT_CHECKLIST.md  docker-compose.yml  mypy.ini  pyproject.toml  run_ci_checks.sh  setup-opencode-env.sh  setup.py  (+4 more)
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml  pr-checks.yml  release.yml
.opencode/: config.json
.opencode/skills/: agent-browser.md  browser-use.md  code-review.md  git-master.md  test-generator.md
.sisyphus/: ralph-loop.local.md
config/: settings.yaml  system_goal.txt
config/characters/: companion.yaml  default.yaml  pixel.yaml
config/linguistic_styles/: default.json  pixel_style.json  warm.json
config/mood_states/: default.md  pixel_moods.md
docs/: PHASE1_IMPLEMENTATION.md  QUICK_REFERENCE.md  ROADMAP.md
src/persona_agent/: __init__.py  exceptions.py
src/persona_agent/config/: __init__.py  loader.py  validator.py
src/persona_agent/config/schemas/: __init__.py  character.py  evolution.py  linguistic.py  memory.py  mood.py  planning.py  settings.py
src/persona_agent/core/: __init__.py  agent_engine.py  agent_engine_refactored.py  cognitive_emotional_engine.py  consistency_validator.py  container.py  db_encryption.py  hierarchical_memory.py  importance_scorer.py  knowledge_graph.py  memory_compression.py  memory_store.py  memory_store_v2.py  mood_engine.py  persona_manager.py  persona_manager_refactored.py  prompt_engine.py  schemas.py  user_modeling.py  vector_index.py  vector_memory.py
src/persona_agent/core/memory/: __init__.py  compaction.py  episodic_memory.py  exceptions.py  scheduler.py  semantic_memory.py  summarizer.py  working_memory.py
src/persona_agent/core/pipeline/: __init__.py  context.py  pipeline.py  stage.py
src/persona_agent/core/pipeline/stages/: __init__.py  cleanup.py  context_prep.py  generation.py  memory_store.py  planning.py  skill_execution.py  validation.py
src/persona_agent/core/planning/: __init__.py  engine.py  exceptions.py  executor.py  models.py
src/persona_agent/mcp/: __init__.py  client.py
src/persona_agent/repositories/: __init__.py  base.py  models.py  session_repository.py
src/persona_agent/services/: __init__.py  character_service.py  chat_service.py  session_service.py
src/persona_agent/skills/: __init__.py  base.py  built_in.py  registry.py
src/persona_agent/skills/evolution/: __init__.py  exceptions.py  generator.py  manager.py  models.py  tracker.py
src/persona_agent/tools/: __init__.py  base.py  code_exec.py  discovery.py  executor.py  file_ops.py  memory_tool.py  sandbox.py  web_search.py
src/persona_agent/ui/: __init__.py  cli.py  formatters.py
src/persona_agent/ui/web/: server.py
src/persona_agent/ui/web/middleware/: __init__.py  logging.py
src/persona_agent/ui/web/static/: app.js  index.html  styles.css
src/persona_agent/utils/: __init__.py  embeddings.py  exceptions.py  llm_client.py  logging_config.py
test_data/skill_evolution/approved/: e2e_proposal.json
test_data/skill_evolution/pending/: e2e_proposal.json  prop_skill_b.json
tests/: __init__.py  conftest.py  test_agent_engine.py  test_config.py  test_config_validator.py  test_exceptions.py  test_integration.py  test_mcp.py  test_memory_store.py  test_mood_engine.py  test_persona_manager.py  test_skills.py  test_vector_memory.py
tests/helpers/: __init__.py  factories.py  mocks.py
tests/integration/: conftest.py  test_chat_workflow.py  test_end_to_end.py  test_evolution_integration.py  test_memory_integration.py  test_planning_integration.py  test_service_interactions.py
tests/new_architecture/: __init__.py  test_cognitive_emotional.py  test_integration.py  test_schemas.py
tests/unit/config/: test_loader.py  test_schemas.py  test_validator.py
tests/unit/core/: test_agent_engine.py  test_cognitive_emotional_engine.py  test_consistency_validator.py  test_container.py  test_db_encryption.py  test_memory_store.py  test_memory_store_v2.py  test_user_modeling.py
tests/unit/core/memory/: test_compaction.py
tests/unit/core/pipeline/: test_context.py  test_pipeline.py
tests/unit/core/pipeline/stages/: test_cleanup.py  test_context_prep.py  test_generation.py  test_memory_store.py  test_planning.py  test_skill_execution.py  test_validation.py
tests/unit/core/planning/: __init__.py  test_engine.py  test_executor.py  test_models.py
tests/unit/repositories/: test_session_repository.py
tests/unit/services/: test_character_service.py  test_chat_service.py  test_session_service.py
tests/unit/skills/evolution/: __init__.py  test_evolution_models.py
tests/unit/tools/: test_base.py  test_discovery.py  test_file_ops.py  test_sandbox.py
tests/unit/ui/: test_cli.py  test_logging_middleware.py  test_web_server.py
tests/unit/utils/: test_embeddings.py  test_exceptions.py  test_llm_client.py  test_logging.py  test_vector_memory.py
