[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "persona-agent"
version = "0.1.0"
description = "A local role-playing AI agent with dynamic persona switching, mood management, and linguistic style customization"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["ai", "agent", "roleplay", "persona", "llm", "claude", "openai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "click>=8.0",
    "rich>=13.0",
    "openai>=1.0",
    "anthropic>=0.18",
    "httpx>=0.25",
    "aiofiles>=23.0",
    "aiosqlite>=0.19",
    "chromadb>=0.4",
    "tiktoken>=0.5",
    "watchdog>=3.0",
    "typer>=0.9",
    "networkx>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "pytest-timeout>=2.0",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.0",
    "pre-commit>=3.0",
]

[project.scripts]
persona-agent = "persona_agent.ui.cli:main"
pa = "persona_agent.ui.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/persona-agent"
Repository = "https://github.com/yourusername/persona-agent"
Documentation = "https://github.com/yourusername/persona-agent/blob/main/docs"
Issues = "https://github.com/yourusername/persona-agent/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/persona_agent"]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = ["E501", "SIM102"]  # Line too long (handled by black), complex ifs

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

# Per-file ignores for legacy files with pre-existing type errors
[[tool.mypy.overrides]]
module = "persona_agent.utils.exceptions"
disable_error_code = ["type-arg", "no-untyped-def"]

[[tool.mypy.overrides]]
module = "persona_agent.skills.base"
disable_error_code = ["type-arg", "no-any-return", "misc"]

[[tool.mypy.overrides]]
module = "persona_agent.utils.embeddings"
disable_error_code = ["no-untyped-def", "import-not-found", "no-untyped-call", "no-any-return"]

[[tool.mypy.overrides]]
module = "persona_agent.skills.registry"
disable_error_code = ["no-untyped-def", "attr-defined", "no-untyped-call"]

[[tool.mypy.overrides]]
module = "persona_agent.mcp.client"
disable_error_code = ["no-untyped-def", "override", "no-untyped-call", "operator", "assignment"]

[[tool.mypy.overrides]]
module = "persona_agent.core.memory_store"
disable_error_code = ["type-arg", "return-value"]

[[tool.mypy.overrides]]
module = "persona_agent.core.vector_memory"
disable_error_code = ["import-not-found", "type-arg", "no-untyped-def"]

[[tool.mypy.overrides]]
module = "persona_agent.utils.llm_client"
disable_error_code = ["type-arg", "override", "assignment"]

[[tool.mypy.overrides]]
module = "persona_agent.core.user_modeling"
disable_error_code = ["no-untyped-def", "no-untyped-call", "call-arg"]

[[tool.mypy.overrides]]
module = "persona_agent.core.schemas"
disable_error_code = ["arg-type", "no-untyped-def"]

[[tool.mypy.overrides]]
module = "persona_agent.core.knowledge_graph"
disable_error_code = ["import-untyped", "no-untyped-def", "no-untyped-call"]

[[tool.mypy.overrides]]
module = "persona_agent.config.schemas.mood"
disable_error_code = ["var-annotated"]

[[tool.mypy.overrides]]
module = "persona_agent.config.schemas.character"
disable_error_code = ["import-untyped", "arg-type"]

[[tool.mypy.overrides]]
module = "persona_agent.config.schemas.settings"
disable_error_code = ["import-untyped"]

[[tool.mypy.overrides]]
module = "persona_agent.services.character_service"
disable_error_code = ["import-untyped"]

[[tool.mypy.overrides]]
module = "persona_agent.core.prompt_engine"
disable_error_code = ["no-untyped-call"]

[[tool.mypy.overrides]]
module = "persona_agent.core.mood_engine"
disable_error_code = ["arg-type"]

[[tool.mypy.overrides]]
module = "persona_agent.core.hierarchical_memory"
disable_error_code = ["import-untyped", "type-arg", "no-any-return", "no-untyped-def", "unused-ignore", "no-untyped-call"]

[[tool.mypy.overrides]]
module = "persona_agent.core.cognitive_emotional_engine"
disable_error_code = ["no-any-return"]

[[tool.mypy.overrides]]
module = "persona_agent.core.persona_manager_refactored"
disable_error_code = ["type-arg", "union-attr", "call-arg"]

[[tool.mypy.overrides]]
module = "persona_agent.core.persona_manager"
disable_error_code = ["type-arg"]

[[tool.mypy.overrides]]
module = "persona_agent.core.agent_engine_refactored"
disable_error_code = ["arg-type", "call-arg", "assignment", "no-untyped-def", "union-attr", "attr-defined", "no-untyped-call", "type-arg"]

[[tool.mypy.overrides]]
module = "persona_agent.core.agent_engine"
disable_error_code = ["union-attr"]

[[tool.mypy.overrides]]
module = "persona_agent.ui.cli"
disable_error_code = ["no-untyped-def", "no-untyped-call"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/persona_agent"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]
